# rs-zips2meta2rbat2stream

./: .gitignore  Cargo.toml  README.md  check.sh  doc-web.sh  doc.sh
examples/zips2meta2rbat2stream/: Cargo.toml  clippy.sh  fmt.sh  run.sh  zips2meta2rbat2stream
examples/zips2meta2rbat2stream/sample.d/: z00.txt  z02.txt
examples/zips2meta2rbat2stream/src/: main.rs
src/: lib.rs
